use case 'create test' partially implemented